--- a/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-5152.yml
+++ b/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-5152.yml
@@ -83,3 +83,19 @@ tags:
 - etw_task_task_0
 - Object Access
 - Audit Filtering Platform Packet Drop
+event_sample:
+- format: xml
+  sample: |-
+    <EventData>
+    <Data Name="ProcessId">0</Data>
+    <Data Name="Application">-</Data>
+    <Data Name="Direction">%%14593</Data>
+    <Data Name="SourceAddress">10.0.10.102</Data>
+    <Data Name="SourcePort">0</Data>
+    <Data Name="DestAddress">10.0.10.10</Data>
+    <Data Name="DestPort">0</Data>
+    <Data Name="Protocol">1</Data>
+    <Data Name="FilterRTID">67867</Data>
+    <Data Name="LayerName">%%14601</Data>
+    <Data Name="LayerRTID">32</Data>
+    </EventData>
