--- a/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-4656_v1.yml
+++ b/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-4656_v1.yml
@@ -128,3 +128,25 @@ tags:
 - Audit Kernel Object
 - Audit Registry
 - Audit Removable Storage
+event_sample:
+- format: xml
+  sample: |-
+    <EventData>
+    <Data Name="SubjectUserSid">S-1-5-18</Data>
+    <Data Name="SubjectUserName">DESKTOP-CQF82L6$</Data>
+    <Data Name="SubjectDomainName">WORKGROUP</Data>
+    <Data Name="SubjectLogonId">0x3e7</Data>
+    <Data Name="ObjectServer">Security</Data>
+    <Data Name="ObjectType">File</Data>
+    <Data Name="ObjectName">C:\Windows\servicing</Data>
+    <Data Name="HandleId">0x554</Data>
+    <Data Name="TransactionId">{00000000-0000-0000-0000-000000000000}</Data>
+    <Data Name="AccessList">%%1541 %%4416</Data>
+    <Data Name="AccessReason">-</Data>
+    <Data Name="AccessMask">0x100001</Data>
+    <Data Name="PrivilegeList">SeBackupPrivilege</Data>
+    <Data Name="RestrictedSidCount">0</Data>
+    <Data Name="ProcessId">0x558</Data>
+    <Data Name="ProcessName">C:\ProgramData\Microsoft\Windows Defender\Platform\4.18.2205.7-0\MsMpEng.exe</Data>
+    <Data Name="ResourceAttributes">-</Data>
+    </EventData>
