--- a/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-4657.yml
+++ b/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-4657.yml
@@ -35,43 +35,43 @@ event_fields:
   type: UnicodeString
   description: full path and name of the registry key which value was modified.
   sample_value: \REGISTRY\MACHINE
-- standard_name: registry_key_value_name
+- standard_name: registry_value_name
   standard_type: TBD
   name: ObjectValueName
   type: UnicodeString
   description: the name of modified registry key value.
   sample_value: New_Name
-- standard_name: object_handle_id
+- standard_name: registry_key_handle_id
   standard_type: TBD
   name: HandleId
   type: Pointer
   description: hexadecimal value of a handle to Object Name.
   sample_value: '0x54'
-- standard_name: object_operation_type
+- standard_name: registry_event_type
   standard_type: TBD
   name: OperationType
   type: UnicodeString
   description: the type of performed operation with registry key value.
   sample_value: Existing registry value modified
-- standard_name: object_value_old_type
+- standard_name: registry_previous_value_type
   standard_type: TBD
   name: OldValueType
   type: UnicodeString
   description: old type of changed registry key value.
   sample_value: REG_SZ
-- standard_name: registry_value_old_data
+- standard_name: registry_previous_value_data
   standard_type: TBD
   name: OldValue
   type: UnicodeString
   description: old value for changed registry key value.
   sample_value: ''
-- standard_name: registry_key_value_type
+- standard_name: registry_value_type
   standard_type: TBD
   name: NewValueType
   type: UnicodeString
   description: new type of changed registry key value.
   sample_value: REG_SZ
-- standard_name: registry_key_value_data
+- standard_name: registry_value_data
   standard_type: TBD
   name: NewValue
   type: UnicodeString
@@ -83,7 +83,7 @@ event_fields:
   type: Pointer
   description: hexadecimal Process ID of the process through which the registry key value was modified.
   sample_value: '0xec43'
-- standard_name: process_path
+- standard_name: process_file_path
   standard_type: TBD
   name: ProcessName
   type: UnicodeString
