Updated and Added Data Dictionaries
- Event 104 - A log file was cleared: Added standard names, descriptions, sample values, and event sample in xml format.
- Event 1100 - Windows Event Log service has shut down: Added dictionary without event fields and added event sample in xml format.
- Event 1102 - The audit log was cleared: standard names, descriptions, sample values, and event sample in xml format.
- Event 6005 - The event log service was started: Added dictionary with event sample in xml format. We still need to review the event fields section of dictionary.
- Event 6006 - The event log service was stopped: Added dictionary with event sample in xml format. We still need to review the event fields section of dictionary.
- Event 4656 - Handle requested to registry object: updated descriptions to make reference to registry objects.
- Event 4656 - handle requested to service object: Added dictionary with event sample in xml format.
- Event 4697 - a service was installed in the system: Removed double quotation marks from descriptions and added event sample in xml format.

--- a/windows/etw-providers/Microsoft-Windows-Eventlog/events/event-104.yml
+++ b/windows/etw-providers/Microsoft-Windows-Eventlog/events/event-104.yml
@@ -1,28 +1,28 @@
-name: Event 104 - Logclear
-description:
+name: Event 104 - A log file was cleared
+description: This event generates every time a log files is cleared
 platform: windows
 log_source: Microsoft-Windows-Eventlog
 event_id: '104'
 event_version: '0'
 event_fields:
-- standard_name: TBD
+- standard_name: user_name
   standard_type: TBD
   name: SubjectUserName
   type: UnicodeString
-  description:
-  sample_value:
-- standard_name: TBD
+  description: The name of the account that cleared the log file
+  sample_value: pedro
+- standard_name: user_domain
   standard_type: TBD
   name: SubjectDomainName
   type: UnicodeString
-  description:
-  sample_value:
+  description: Subject's domain or computer name
+  sample_value: PEDRO01
 - standard_name: TBD
   standard_type: TBD
   name: Channel
   type: UnicodeString
-  description:
-  sample_value:
+  description: Name of Log file cleared
+  sample_value: Microsoft-Windows-PowerShell/Operational
 - standard_name: TBD
   standard_type: TBD
   name: BackupPath
@@ -33,3 +33,32 @@ references:
 tags:
 - etw_level_Informational
 - etw_task_Logclear
+event_sample:
+- format: xml
+  sample: |-
+    <Event xmlns="http://schemas.microsoft.com/win/2004/08/events/event"> 
+      <System> 
+        <Provider Name="Microsoft-Windows-Eventlog" Guid="{fc65ddd8-d6ef-4962-83d5-6e5cfe9ce148}" /> 
+        <EventID>104</EventID> 
+        <Version>0</Version> 
+        <Level>4</Level> 
+        <Task>104</Task> 
+        <Opcode>0</Opcode> 
+        <Keywords>0x8000000000000000</Keywords> 
+        <TimeCreated SystemTime="2022-08-09T14:44:05.786938100Z" /> 
+        <EventRecordID>1113</EventRecordID> 
+        <Correlation /> 
+        <Execution ProcessID="1444" ThreadID="2044" /> 
+        <Channel>System</Channel> 
+        <Computer>Pedro01</Computer> 
+        <Security UserID="S-1-5-21-968647429-258479840-2507984072-1001" /> 
+      </System> 
+      <UserData> 
+        <LogFileCleared xmlns="http://manifests.microsoft.com/win/2004/08/windows/eventlog"> 
+          <SubjectUserName>pedro</SubjectUserName> 
+          <SubjectDomainName>PEDRO01</SubjectDomainName> 
+          <Channel>Microsoft-Windows-PowerShell/Operational</Channel> 
+          <BackupPath> </BackupPath> 
+        </LogFileCleared> 
+      </UserData> 
+    </Event> 
