--- a/windows/etw-providers/Microsoft-Windows-Eventlog/events/event-1102.yml
+++ b/windows/etw-providers/Microsoft-Windows-Eventlog/events/event-1102.yml
@@ -1,35 +1,65 @@
-name: Event 1102 - Logclear
-description:
+name: Event 1102 - The audit log was cleared
+description: This event generates every time Windows Security audit log files is cleared
 platform: windows
 log_source: Microsoft-Windows-Eventlog
 event_id: '1102'
 event_version: '0'
 event_fields:
-- standard_name: TBD
+- standard_name: user_sid
   standard_type: TBD
   name: SubjectUserSid
   type: SID
-  description:
-  sample_value:
-- standard_name: TBD
+  description: SID of the account that cleared the system security audit log
+  sample_value: S-1-5-21-968647429-258479840-2507984072-1001
+- standard_name: user_name
   standard_type: TBD
   name: SubjectUserName
   type: UnicodeString
-  description:
-  sample_value:
-- standard_name: TBD
+  description: The name of the account that cleared the system security audit log
+  sample_value: pedro
+- standard_name: user_domain
   standard_type: TBD
   name: SubjectDomainName
   type: UnicodeString
-  description:
-  sample_value:
-- standard_name: TBD
+  description: Subject's domain or computer name
+  sample_value: PEDRO01
+- standard_name: user_logon_id
   standard_type: TBD
   name: SubjectLogonId
   type: HexInt64
-  description:
-  sample_value:
+  description: Logon ID of the subject's logon session
+  sample_value: 0x20256d6
 references:
+- https://docs.microsoft.com/en-us/windows/security/threat-protection/auditing/event-1102
 tags:
 - etw_level_Informational
 - etw_task_Logclear
+event_sample:
+- format: xml
+  sample: |-
+    <Event xmlns="http://schemas.microsoft.com/win/2004/08/events/event"> 
+      <System> 
+        <Provider Name="Microsoft-Windows-Eventlog" Guid="{fc65ddd8-d6ef-4962-83d5-6e5cfe9ce148}" /> 
+        <EventID>1102</EventID> 
+        <Version>0</Version> 
+        <Level>4</Level> 
+        <Task>104</Task> 
+        <Opcode>0</Opcode> 
+        <Keywords>0x4020000000000000</Keywords> 
+        <TimeCreated SystemTime="2022-08-09T14:44:05.629920700Z" /> 
+        <EventRecordID>266417</EventRecordID> 
+        <Correlation /> 
+        <Execution ProcessID="1444" ThreadID="2044" /> 
+        <Channel>Security</Channel> 
+        <Computer>Pedro01</Computer> 
+        <Security /> 
+      </System> 
+      <UserData> 
+        <LogFileCleared xmlns="http://manifests.microsoft.com/win/2004/08/windows/eventlog"> 
+          <SubjectUserSid>S-1-5-21-968647429-258479840-2507984072-1001</SubjectUserSid> 
+          <SubjectUserName>pedro</SubjectUserName> 
+          <SubjectDomainName>PEDRO01</SubjectDomainName> 
+          <SubjectLogonId>0x20256d6</SubjectLogonId> 
+        </LogFileCleared> 
+      </UserData> 
+    </Event> 
