--- a/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-4904.yml
+++ b/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-4904.yml
@@ -29,13 +29,13 @@ event_fields:
   type: HexInt64
   description: 'hexadecimal value that can help you correlate this event with recent events that might contain the same Logon ID, for example, "4624: An account was successfully logged on."'
   sample_value: '0x3e7'
-- standard_name: event_source_name
+- standard_name: audit_policy_source
   standard_type: TBD
   name: AuditSourceName
   type: UnicodeString
   description: 'the name of registered security event source. You can see all registered security event source names in this registry path: "HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services\EventLog\Security".'
   sample_value: FSRM Audit
-- standard_name: event_source_id
+- standard_name: audit_policy_source_id
   standard_type: TBD
   name: EventSourceId
   type: HexInt64
@@ -47,7 +47,7 @@ event_fields:
   type: Pointer
   description: hexadecimal Process ID of the process that attempted to register the security event source.
   sample_value: '0x688'
-- standard_name: process_path
+- standard_name: process_file_path
   standard_type: TBD
   name: ProcessName
   type: UnicodeString
@@ -65,3 +65,34 @@ tags:
 - etw_task_task_0
 - Policy Change
 - Audit Policy Change
+event_sample:
+- format: xml
+  sample: |-
+    <Event xmlns="http://schemas.microsoft.com/win/2004/08/events/event">
+      <System>
+        <Provider Name="Microsoft-Windows-Security-Auditing" Guid="{54849625-5478-4994-A5BA-3E3B0328C30D}" /> 
+        <EventID>4904</EventID> 
+        <Version>0</Version> 
+        <Level>0</Level> 
+        <Task>13568</Task> 
+        <Opcode>0</Opcode> 
+        <Keywords>0x8020000000000000</Keywords> 
+        <TimeCreated SystemTime="2015-10-01T00:53:01.030688000Z" /> 
+        <EventRecordID>1049538</EventRecordID> 
+        <Correlation /> 
+        <Execution ProcessID="520" ThreadID="548" /> 
+        <Channel>Security</Channel> 
+        <Computer>DC01.contoso.local</Computer> 
+        <Security /> 
+      </System>
+      <EventData>
+        <Data Name="SubjectUserSid">S-1-5-18</Data> 
+        <Data Name="SubjectUserName">DC01$</Data> 
+        <Data Name="SubjectDomainName">CONTOSO</Data> 
+        <Data Name="SubjectLogonId">0x3e7</Data> 
+        <Data Name="AuditSourceName">FSRM Audit</Data> 
+        <Data Name="EventSourceId">0x1cc4e</Data> 
+        <Data Name="ProcessId">0x688</Data> 
+        <Data Name="ProcessName">C:\\Windows\\System32\\svchost.exe</Data> 
+      </EventData>
+    </Event>
