--- a/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-4906.yml
+++ b/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-4906.yml
@@ -5,7 +5,7 @@ log_source: Microsoft-Windows-Security-Auditing
 event_id: '4906'
 event_version: '0'
 event_fields:
-- standard_name: crash_on_audit_fail_value
+- standard_name: audit_policy_crash_on_audit_fail_value
   standard_type: TBD
   name: CrashOnAuditFailValue
   type: UInt32
@@ -18,8 +18,33 @@ references:
   link: https://docs.microsoft.com/en-us/windows/security/threat-protection/auditing/advanced-security-audit-policy-settings#policy-change
 - text: MS Security Auditing Sub-category - Audit Policy Change
   link: https://github.com/MicrosoftDocs/windows-itpro-docs/tree/master/windows/security/threat-protection/auditing/audit-policy-change.md
+- link: https://docs.microsoft.com/en-us/previous-versions/windows/it-pro/windows-2000-server/cc963220(v=technet.10)
 tags:
 - etw_level_Informational
 - etw_task_task_0
 - Policy Change
 - Audit Policy Change
+event_sample:
+- format: xml
+  sample: |-
+    <Event xmlns="http://schemas.microsoft.com/win/2004/08/events/event">
+      <System>
+        <Provider Name="Microsoft-Windows-Security-Auditing" Guid="{54849625-5478-4994-A5BA-3E3B0328C30D}" /> 
+        <EventID>4906</EventID> 
+        <Version>0</Version> 
+        <Level>0</Level> 
+        <Task>13568</Task> 
+        <Opcode>0</Opcode> 
+        <Keywords>0x8020000000000000</Keywords> 
+        <TimeCreated SystemTime="2015-10-01T00:45:07.048458800Z" /> 
+        <EventRecordID>1049529</EventRecordID> 
+        <Correlation /> 
+        <Execution ProcessID="516" ThreadID="532" /> 
+        <Channel>Security</Channel> 
+        <Computer>DC01.contoso.local</Computer> 
+        <Security /> 
+      </System>
+      <EventData>
+        <Data Name="CrashOnAuditFailValue">1</Data> 
+      </EventData>
+    </Event>
