--- a/windows/sysmon/events/event-13.yml
+++ b/windows/sysmon/events/event-13.yml
@@ -66,16 +66,54 @@ references:
   link: https://github.com/trustedsec/SysmonCommunityGuide/blob/master/registry-actions.md
 tags: []
 event_sample:
-- format: xml
-  sample: |-
-    <EventData>
-    <Data Name="RuleName">-</Data>
-    <Data Name="EventType">SetValue</Data>
-    <Data Name="UtcTime">2022-06-29 18:58:42.007</Data>
-    <Data Name="ProcessGuid">{01e2a015-00dd-62bc-7800-000000000500}</Data>
-    <Data Name="ProcessId">2632</Data>
-    <Data Name="Image">C:\Windows\system32\ctfmon.exe</Data>
-    <Data Name="TargetObject">HKU\S-1-5-21-2073674718-3587034731-622476709-1001\SOFTWARE\Microsoft\Input\TypingInsights\Insights</Data>
-    <Data Name="Details">Binary Data</Data>
-    <Data Name="User">DESKTOP-CQF82L6\pedro</Data>
-    </EventData>
+  - format: friendly view
+    sample: |-
+      Log Name:      Microsoft-Windows-Sysmon/Operational 
+      Source:        Microsoft-Windows-Sysmon 
+      Date:          8/18/2022 5:35:58 PM 
+      Event ID:      13 
+      Task Category: Registry value set (rule: RegistryEvent) 
+      Level:         Information 
+      Keywords:       
+      User:          SYSTEM 
+      Computer:      pedro-computer 
+      Description: 
+      Registry value set: 
+      RuleName: - 
+      EventType: SetValue 
+      UtcTime: 2022-08-19 00:35:58.812 
+      ProcessGuid: {564ff025-daee-62fe-7b03-000000000700} 
+      ProcessId: 4964 
+      Image: C:\Windows\system32\reg.exe 
+      TargetObject: HKLM\SOFTWARE\Microsoft\Windows\CurrentVersion\Policies\System\Audit\ProcessCreationIncludeCmdLine_Enabled 
+      Details: DWORD (0x00000000) 
+  - format: xml
+    sample: |-
+      <Event xmlns="http://schemas.microsoft.com/win/2004/08/events/event"> 
+        <System> 
+          <Provider Name="Microsoft-Windows-Sysmon" Guid="{5770385f-c22a-43e0-bf4c-06f5698ffbd9}" /> 
+          <EventID>13</EventID> 
+          <Version>2</Version> 
+          <Level>4</Level> 
+          <Task>13</Task> 
+          <Opcode>0</Opcode> 
+          <Keywords>0x8000000000000000</Keywords> 
+          <TimeCreated SystemTime="2022-08-19T00:35:58.817059900Z" /> 
+          <EventRecordID>5377549</EventRecordID> 
+          <Correlation /> 
+          <Execution ProcessID="2712" ThreadID="2140" /> 
+          <Channel>Microsoft-Windows-Sysmon/Operational</Channel> 
+          <Computer>pedro-computer</Computer> 
+          <Security UserID="S-1-5-18" /> 
+        </System> 
+        <EventData> 
+          <Data Name="RuleName">-</Data> 
+          <Data Name="EventType">SetValue</Data> 
+          <Data Name="UtcTime">2022-08-19 00:35:58.812</Data> 
+          <Data Name="ProcessGuid">{564ff025-daee-62fe-7b03-000000000700}</Data> 
+          <Data Name="ProcessId">4964</Data> 
+          <Data Name="Image">C:\Windows\system32\reg.exe</Data> 
+          <Data Name="TargetObject">HKLM\SOFTWARE\Microsoft\Windows\CurrentVersion\Policies\System\Audit\ProcessCreationIncludeCmdLine_Enabled</Data> 
+          <Data Name="Details">DWORD (0x00000000)</Data> 
+        </EventData> 
+      </Event>
